--- a/main.css
+++ b/main.css
@@ -8,35 +8,38 @@ header {
 }
 
 .navbar .nav-link {
-    color: white;
-    font-weight: 600;
-    border: 1px solid white;
-    border-radius: 0.375rem;
-    padding: 0.375rem 1rem;
-    border-color: white;
+  color: white;
+  font-weight: 600;
+  border: 1px solid white;
+  border-radius: 0.375rem;
+  padding: 0.375rem 1rem;
+  border-color: white;
 }
 
 .navbar .nav-link:hover {
-    background-color: white;
-    color: #3C7C79;
-    border-color: #3C7C79;
+  background-color: white;
+  color: #3C7C79;
+  border-color: #3C7C79;
 }
 
 .navbar .nav-link.active {
-    background-color: transparent; 
-     border-bottom: 5px solid white;
+  background-color: transparent; 
+  border-bottom: 5px solid white;
 }
 
 .navbar .nav-link.active:hover {
-    background-color: white;
-    color: #3C7C79;
-    border-color: #3C7C79;
+  background-color: white;
+  color: #3C7C79;
+  border-color: #3C7C79;
 }
 
 /* Main styles for page */
+html, body {height: 100%;}
+
 body {
   display: flex;
   flex-direction: column;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 main {
@@ -44,8 +47,18 @@ main {
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
+  flex: 1;
 }
 
 footer {
   flex: 0 30px;
+  padding: 1rem;
+  text-align: center;
+  background-color:#3C7C79;
+  color: white;
+}
+
+.btn-primary {
+  background-color: #3C7C79;
+  border-color: #3C7C79;
 }
