--- a/myrecipes.css
+++ b/myrecipes.css
@@ -6,3 +6,12 @@
     justify-content: center;
     padding: 2rem;
 }
+
+.recipe-card img {
+  width: 100%;
+  height: 200px;        
+  object-fit: cover;    
+  border-top-left-radius: 10px; 
+  border-top-right-radius: 10px;
+}
+/* Used a lot of bootstrap styles  */
