--- a/src/app.css
+++ b/src/app.css
@@ -34,7 +34,7 @@ header {
 }
 
 /* Main styles for page */
-html, body {height: 100%;}
+html, body, #root {height: 100%;}
 
 body {
   display: flex;
